--- a/weather/weather_site/templates/sites/main.html
+++ b/weather/weather_site/templates/sites/main.html
@@ -1,13 +1,30 @@
+{% load static %}
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pl">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WeatherApp by Borygo</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/css/bootstrap.min.css">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 <body>
-    <div class="navbar">
-        <h1>WeatherApp by Borygo</h1>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">WeatherApp by Borygo</a>
+        </div>
+    </nav>
+    <div class="container">
         <h2>Podaj lokalizację:</h2>
+        <input type="text" class="form-control" id="city" placeholder="Wpisz miasto" required>
+        <button id="get-sunrise" class="btn btn-primary" style="margin-top: 10px;">Szukaj</button>
+
+        <!-- Div, w którym wyświetlimy godzinę wschodu słońca -->
+        <div id="sunrise-time-container" style="margin-top: 20px; font-size: 18px; font-weight: bold;">
+            <!-- Godzina wschodu słońca będzie wyświetlana tutaj -->
+        </div>
     </div>
+
+<script src="{% static 'js/scripts.js' %}"></script>
 </body>
 </html>
